@startuml
'https://plantuml.com/class-diagram

title "As a Buyer, I want to get the list of items on auction of a given author" CD

'==== basic style ====
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ActivationBackgroundColor black
skinparam classAttributeIconSize 0

class GetItemsOnAuctionOfAGivenAuthorUI{}

package "controller" {
    class GetItemsOnAuctionOfAGivenAuthorController {
        +getAuctionItemsByAuthorId(authorId: AuthorId): List<ItemId>
        +findAllKeys() : List<AuthorId>
    }
}

package "ddd" {
    interface IRepository<ID, T> <<Interface>>
}

package "domain" {
    package "repository" {
        interface IAuthorRepo <<Interface>> {
            +findAllKeys() : List<AuthorId>
        }
        interface IAuctionRepo <<Interface>> {
            +findAll() : Iterable<Auction>
        }
        interface IItemRepo <<Interface>> {
            +ofIdentity(id : ItemId) : Optional<Item>
        }
        interface IEditionRepo <<Interface>> {
            +ofIdentity(id : EditionId) : Optional<Edition>
        }
        interface IPublicationRepo <<Interface>> {
            +ofIdentity(publicationId : PublicationId) : Optional<Publication>
        }
    }

    package "valueobject" {
        class AuthorId <<Value Object>>
        class ItemId <<Value Object>>
        class EditionId <<Value Object>>
        class PublicationId <<Value Object>>
    }

    package "auction" #b0c4d4 {
        class Auction <<Root>> <<Entity>> {
            getItemsId() : List<ItemId>
        }
    }

    package "item" {
        class Item <<Root>> <<Entity>> {
            +getEditionId() : EditionId
        }
    }

    package "edition" {
        class Edition <<Root>> <<Entity>> {
            +getPublicationId() : PublicationId
        }
    }

    package "publication" {
        class Publication <<Root>> <<Entity>> {
            +isByAuthorId(authorId : AuthorId) : boolean
        }
    }
}

GetItemsOnAuctionOfAGivenAuthorUI "1".>"1" GetItemsOnAuctionOfAGivenAuthorController : invokes

GetItemsOnAuctionOfAGivenAuthorController "1" ..> "1" IAuctionRepo : <<use>>
GetItemsOnAuctionOfAGivenAuthorController "1" ..> "1" IItemRepo : <<use>>
GetItemsOnAuctionOfAGivenAuthorController "1" ..> "1" IEditionRepo : <<use>>
GetItemsOnAuctionOfAGivenAuthorController "1" ..> "1" IPublicationRepo : <<use>>
GetItemsOnAuctionOfAGivenAuthorController "1" ..> "1" IAuthorRepo : <<use>>

IAuctionRepo --|> IRepository
IItemRepo --|> IRepository
IEditionRepo --|> IRepository
IPublicationRepo --|> IRepository
IAuthorRepo --|> IRepository

IAuctionRepo "1" --> "*" Auction : manages
IItemRepo "1" --> "*" Item : manages
IEditionRepo "1" --> "*" Edition : manages
IPublicationRepo "1" --> "*" Publication : manages

Auction "1" o-- "1..*" ItemId : aggregates
Item "1" --> "1" EditionId : has
Item "1" --> "1" ItemId : has
Edition "1" --> "1" PublicationId : has
Edition "1" --> "1" EditionId : has
Publication "1" --> "1" AuthorId : has
Publication "1" --> "1" PublicationId : has

@enduml
